// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create bar options 1`] = `
Object {
  "layout": Object {
    "padding": Object {
      "top": 0,
    },
  },
  "lineAt": undefined,
  "plugins": Object {
    "legend": Object {
      "display": false,
      "labels": Object {
        "boxWidth": 12,
        "color": "#666",
        "sort": [Function],
      },
      "onClick": [Function],
    },
  },
  "scales": Object {
    "axis-0": Object {
      "axis": "y",
      "grid": Object {
        "color": "rgba(0,0,0,0.1)",
      },
      "id": "axis-0",
      "stacked": undefined,
      "suggestedMax": undefined,
      "ticks": Object {
        "beginAtZero": true,
        "color": "#666",
      },
      "title": Object {
        "color": "#666",
        "display": false,
        "font": Object {
          "size": 14,
          "weight": "bold",
        },
        "text": undefined,
      },
      "type": undefined,
    },
    "xAxes": Object {
      "axis": "x",
      "grid": Object {
        "color": "rgba(0,0,0,0.1)",
      },
      "stacked": undefined,
      "ticks": Object {
        "autoSkip": undefined,
        "callback": [Function],
        "color": "#666",
      },
      "title": Object {
        "color": "#666",
        "display": false,
        "font": Object {
          "size": 14,
          "weight": "bold",
        },
        "text": undefined,
      },
    },
  },
  "spanGaps": true,
  "tension": 0.4,
}
`;

exports[`should create correct options for multi-measure charts 1`] = `
Object {
  "animation": false,
  "layout": Object {
    "padding": Object {
      "top": 0,
    },
  },
  "lineAt": undefined,
  "maintainAspectRatio": false,
  "plugins": Object {
    "datalabels": Object {
      "display": undefined,
      "formatter": [Function],
    },
    "legend": Object {
      "display": true,
      "labels": Object {
        "boxWidth": 12,
        "color": "#666",
        "sort": [Function],
      },
      "onClick": [Function],
    },
    "tooltip": Object {
      "callbacks": Object {
        "label": [Function],
        "labelColor": [Function],
        "title": [Function],
      },
      "enabled": true,
    },
  },
  "responsive": true,
  "scales": Object {
    "axis-0": Object {
      "axis": "y",
      "grid": Object {
        "color": "rgba(0,0,0,0.1)",
      },
      "id": "axis-0",
      "stacked": undefined,
      "suggestedMax": undefined,
      "ticks": Object {
        "beginAtZero": true,
        "color": "#666",
      },
      "title": Object {
        "color": "#666",
        "display": true,
        "font": Object {
          "size": 14,
          "weight": "bold",
        },
        "text": "Flow Node Count",
      },
      "type": undefined,
    },
    "axis-1": Object {
      "axis": "y",
      "grid": Object {
        "drawOnChartArea": false,
      },
      "id": "axis-1",
      "position": "right",
      "suggestedMax": undefined,
      "ticks": Object {
        "beginAtZero": true,
        "callback": [Function],
        "color": "#666",
        "stepSize": 1000,
      },
      "title": Object {
        "color": "#666",
        "display": true,
        "font": Object {
          "size": 14,
          "weight": "bold",
        },
        "text": "Flow Node Duration",
      },
      "type": undefined,
    },
    "xAxes": Object {
      "axis": "x",
      "grid": Object {
        "color": "rgba(0,0,0,0.1)",
      },
      "stacked": undefined,
      "ticks": Object {
        "autoSkip": false,
        "callback": [Function],
        "color": "#666",
      },
      "title": Object {
        "color": "#666",
        "display": false,
        "font": Object {
          "size": 14,
          "weight": "bold",
        },
        "text": undefined,
      },
    },
  },
  "spanGaps": true,
  "tension": 0.4,
}
`;

exports[`should create default chart options 1`] = `
Object {
  "animation": false,
  "emptyBackgroundColor": "#efefef",
  "maintainAspectRatio": false,
  "plugins": Object {
    "datalabels": Object {
      "align": "start",
      "display": undefined,
      "formatter": [Function],
    },
    "legend": Object {
      "autoCollapse": true,
      "display": true,
      "labels": Object {
        "color": "#666",
        "generateLabels": [Function],
      },
    },
    "tooltip": Object {
      "callbacks": Object {
        "label": [Function],
        "labelColor": [Function],
        "title": [Function],
      },
      "enabled": true,
    },
  },
  "responsive": true,
}
`;
